plugins/wasm-go/extensions/waf-deny/wasmplugin/go_rules/rule_941/xss.go

//line xss.rl:1
package rule_941

func matchXSS(data []byte) bool {

//line xss.rl:5

//line xss.go:10
const xss_start int = 0
const xss_first_final int = 208
const xss_error int = -1

const xss_en_main int = 0


//line xss.rl:6
    cs, p, pe, eof := 0, 0, len(data), len(data)
        _ = eof
    
//line xss.go:22
	{
	cs = xss_start
	}

//line xss.go:27
	{
	if p == pe {
		goto _test_eof
	}
	switch cs {
	case 0:
		goto st_case_0
	case 1:
		goto st_case_1
	case 2:
		goto st_case_2
	case 3:
		goto st_case_3
	case 4:
		goto st_case_4
	case 5:
		goto st_case_5
	case 6:
		goto st_case_6
	case 7:
		goto st_case_7
	case 8:
		goto st_case_8
	case 208:
		goto st_case_208
	case 9:
		goto st_case_9
	case 10:
		goto st_case_10
	case 11:
		goto st_case_11
	case 12:
		goto st_case_12
	case 13:
		goto st_case_13
	case 14:
		goto st_case_14
	case 15:
		goto st_case_15
	case 16:
		goto st_case_16
	case 17:
		goto st_case_17
	case 18:
		goto st_case_18
	case 19:
		goto st_case_19
	case 20:
		goto st_case_20
	case 21:
		goto st_case_21
	case 22:
		goto st_case_22
	case 23:
		goto st_case_23
	case 24:
		goto st_case_24
	case 25:
		goto st_case_25
	case 26:
		goto st_case_26
	case 209:
		goto st_case_209
	case 210:
		goto st_case_210
	case 211:
		goto st_case_211
	case 27:
		goto st_case_27
	case 28:
		goto st_case_28
	case 29:
		goto st_case_29
	case 30:
		goto st_case_30
	case 31:
		goto st_case_31
	case 32:
		goto st_case_32
	case 33:
		goto st_case_33
	case 34:
		goto st_case_34
	case 35:
		goto st_case_35
	case 36:
		goto st_case_36
	case 37:
		goto st_case_37
	case 38:
		goto st_case_38
	case 39:
		goto st_case_39
	case 40:
		goto st_case_40
	case 41:
		goto st_case_41
	case 42:
		goto st_case_42
	case 43:
		goto st_case_43
	case 44:
		goto st_case_44
	case 45:
		goto st_case_45
	case 46:
		goto st_case_46
	case 47:
		goto st_case_47
	case 48:
		goto st_case_48
	case 212:
		goto st_case_212
	case 49:
		goto st_case_49
	case 213:
		goto st_case_213
	case 214:
		goto st_case_214
	case 215:
		goto st_case_215
	case 50:
		goto st_case_50
	case 51:
		goto st_case_51
	case 52:
		goto st_case_52
	case 53:
		goto st_case_53
	case 54:
		goto st_case_54
	case 55:
		goto st_case_55
	case 216:
		goto st_case_216
	case 217:
		goto st_case_217
	case 218:
		goto st_case_218
	case 56:
		goto st_case_56
	case 57:
		goto st_case_57
	case 58:
		goto st_case_58
	case 59:
		goto st_case_59
	case 60:
		goto st_case_60
	case 61:
		goto st_case_61
	case 62:
		goto st_case_62
	case 63:
		goto st_case_63
	case 64:
		goto st_case_64
	case 65:
		goto st_case_65
	case 66:
		goto st_case_66
	case 67:
		goto st_case_67
	case 68:
		goto st_case_68
	case 69:
		goto st_case_69
	case 70:
		goto st_case_70
	case 71:
		goto st_case_71
	case 72:
		goto st_case_72
	case 73:
		goto st_case_73
	case 74:
		goto st_case_74
	case 75:
		goto st_case_75
	case 76:
		goto st_case_76
	case 77:
		goto st_case_77
	case 78:
		goto st_case_78
	case 79:
		goto st_case_79
	case 80:
		goto st_case_80
	case 81:
		goto st_case_81
	case 82:
		goto st_case_82
	case 83:
		goto st_case_83
	case 84:
		goto st_case_84
	case 85:
		goto st_case_85
	case 86:
		goto st_case_86
	case 87:
		goto st_case_87
	case 88:
		goto st_case_88
	case 89:
		goto st_case_89
	case 90:
		goto st_case_90
	case 91:
		goto st_case_91
	case 92:
		goto st_case_92
	case 93:
		goto st_case_93
	case 94:
		goto st_case_94
	case 95:
		goto st_case_95
	case 96:
		goto st_case_96
	case 97:
		goto st_case_97
	case 98:
		goto st_case_98
	case 99:
		goto st_case_99
	case 100:
		goto st_case_100
	case 101:
		goto st_case_101
	case 102:
		goto st_case_102
	case 103:
		goto st_case_103
	case 104:
		goto st_case_104
	case 105:
		goto st_case_105
	case 106:
		goto st_case_106
	case 107:
		goto st_case_107
	case 108:
		goto st_case_108
	case 109:
		goto st_case_109
	case 110:
		goto st_case_110
	case 111:
		goto st_case_111
	case 219:
		goto st_case_219
	case 112:
		goto st_case_112
	case 113:
		goto st_case_113
	case 114:
		goto st_case_114
	case 115:
		goto st_case_115
	case 116:
		goto st_case_116
	case 117:
		goto st_case_117
	case 118:
		goto st_case_118
	case 119:
		goto st_case_119
	case 120:
		goto st_case_120
	case 121:
		goto st_case_121
	case 122:
		goto st_case_122
	case 123:
		goto st_case_123
	case 124:
		goto st_case_124
	case 220:
		goto st_case_220
	case 221:
		goto st_case_221
	case 125:
		goto st_case_125
	case 126:
		goto st_case_126
	case 127:
		goto st_case_127
	case 128:
		goto st_case_128
	case 129:
		goto st_case_129
	case 130:
		goto st_case_130
	case 131:
		goto st_case_131
	case 132:
		goto st_case_132
	case 133:
		goto st_case_133
	case 134:
		goto st_case_134
	case 135:
		goto st_case_135
	case 136:
		goto st_case_136
	case 137:
		goto st_case_137
	case 222:
		goto st_case_222
	case 138:
		goto st_case_138
	case 139:
		goto st_case_139
	case 140:
		goto st_case_140
	case 141:
		goto st_case_141
	case 142:
		goto st_case_142
	case 143:
		goto st_case_143
	case 144:
		goto st_case_144
	case 145:
		goto st_case_145
	case 146:
		goto st_case_146
	case 147:
		goto st_case_147
	case 148:
		goto st_case_148
	case 149:
		goto st_case_149
	case 150:
		goto st_case_150
	case 151:
		goto st_case_151
	case 223:
		goto st_case_223
	case 152:
		goto st_case_152
	case 153:
		goto st_case_153
	case 154:
		goto st_case_154
	case 155:
		goto st_case_155
	case 156:
		goto st_case_156
	case 157:
		goto st_case_157
	case 158:
		goto st_case_158
	case 159:
		goto st_case_159
	case 160:
		goto st_case_160
	case 161:
		goto st_case_161
	case 162:
		goto st_case_162
	case 163:
		goto st_case_163
	case 164:
		goto st_case_164
	case 224:
		goto st_case_224
	case 225:
		goto st_case_225
	case 226:
		goto st_case_226
	case 227:
		goto st_case_227
	case 228:
		goto st_case_228
	case 229:
		goto st_case_229
	case 230:
		goto st_case_230
	case 231:
		goto st_case_231
	case 232:
		goto st_case_232
	case 233:
		goto st_case_233
	case 234:
		goto st_case_234
	case 165:
		goto st_case_165
	case 166:
		goto st_case_166
	case 167:
		goto st_case_167
	case 168:
		goto st_case_168
	case 169:
		goto st_case_169
	case 170:
		goto st_case_170
	case 171:
		goto st_case_171
	case 235:
		goto st_case_235
	case 236:
		goto st_case_236
	case 172:
		goto st_case_172
	case 237:
		goto st_case_237
	case 238:
		goto st_case_238
	case 173:
		goto st_case_173
	case 239:
		goto st_case_239
	case 240:
		goto st_case_240
	case 241:
		goto st_case_241
	case 174:
		goto st_case_174
	case 242:
		goto st_case_242
	case 243:
		goto st_case_243
	case 244:
		goto st_case_244
	case 245:
		goto st_case_245
	case 175:
		goto st_case_175
	case 176:
		goto st_case_176
	case 177:
		goto st_case_177
	case 178:
		goto st_case_178
	case 179:
		goto st_case_179
	case 180:
		goto st_case_180
	case 246:
		goto st_case_246
	case 247:
		goto st_case_247
	case 248:
		goto st_case_248
	case 249:
		goto st_case_249
	case 250:
		goto st_case_250
	case 181:
		goto st_case_181
	case 182:
		goto st_case_182
	case 183:
		goto st_case_183
	case 251:
		goto st_case_251
	case 184:
		goto st_case_184
	case 185:
		goto st_case_185
	case 186:
		goto st_case_186
	case 187:
		goto st_case_187
	case 188:
		goto st_case_188
	case 189:
		goto st_case_189
	case 252:
		goto st_case_252
	case 190:
		goto st_case_190
	case 191:
		goto st_case_191
	case 192:
		goto st_case_192
	case 193:
		goto st_case_193
	case 194:
		goto st_case_194
	case 195:
		goto st_case_195
	case 253:
		goto st_case_253
	case 254:
		goto st_case_254
	case 196:
		goto st_case_196
	case 255:
		goto st_case_255
	case 256:
		goto st_case_256
	case 197:
		goto st_case_197
	case 198:
		goto st_case_198
	case 199:
		goto st_case_199
	case 200:
		goto st_case_200
	case 201:
		goto st_case_201
	case 202:
		goto st_case_202
	case 203:
		goto st_case_203
	case 204:
		goto st_case_204
	case 205:
		goto st_case_205
	case 206:
		goto st_case_206
	case 207:
		goto st_case_207
	}
	goto st_out
	st_case_0:
		switch data[p] {
		case 33:
			goto st10
		case 59:
			goto st11
		case 60:
			goto st12
		case 64:
			goto st13
		case 100:
			goto st152
		case 102:
			goto st156
		case 112:
			goto st165
		case 120:
			goto st197
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] > 13:
				if 32 <= data[p] && data[p] <= 47 {
					goto st9
				}
			case data[p] >= 9:
				goto st9
			}
		case data[p] > 63:
			switch {
			case data[p] < 97:
				if 91 <= data[p] && data[p] <= 96 {
					goto st9
				}
			case data[p] > 122:
				if 123 <= data[p] && data[p] <= 126 {
					goto st9
				}
			default:
				goto st94
			}
		default:
			goto st9
		}
		goto st1
	st1:
		if p++; p == pe {
			goto _test_eof1
		}
	st_case_1:
		if data[p] == 60 {
			goto st2
		}
		goto st1
	st2:
		if p++; p == pe {
			goto _test_eof2
		}
	st_case_2:
		switch data[p] {
		case 60:
			goto st2
		case 115:
			goto st3
		}
		goto st1
	st3:
		if p++; p == pe {
			goto _test_eof3
		}
	st_case_3:
		switch data[p] {
		case 60:
			goto st2
		case 99:
			goto st4
		}
		goto st1
	st4:
		if p++; p == pe {
			goto _test_eof4
		}
	st_case_4:
		switch data[p] {
		case 60:
			goto st2
		case 114:
			goto st5
		}
		goto st1
	st5:
		if p++; p == pe {
			goto _test_eof5
		}
	st_case_5:
		switch data[p] {
		case 60:
			goto st2
		case 105:
			goto st6
		}
		goto st1
	st6:
		if p++; p == pe {
			goto _test_eof6
		}
	st_case_6:
		switch data[p] {
		case 60:
			goto st2
		case 112:
			goto st7
		}
		goto st1
	st7:
		if p++; p == pe {
			goto _test_eof7
		}
	st_case_7:
		switch data[p] {
		case 60:
			goto st2
		case 116:
			goto st8
		}
		goto st1
	st8:
		if p++; p == pe {
			goto _test_eof8
		}
	st_case_8:
		if data[p] == 62 {
			goto tr18
		}
		goto st8
tr18:
//line xss.rl:10

            return true
        
	goto st208
	st208:
		if p++; p == pe {
			goto _test_eof208
		}
	st_case_208:
//line xss.go:696
		if data[p] == 62 {
			goto tr18
		}
		goto st8
	st9:
		if p++; p == pe {
			goto _test_eof9
		}
	st_case_9:
		switch data[p] {
		case 33:
			goto st10
		case 59:
			goto st11
		case 60:
			goto st12
		case 64:
			goto st13
		case 100:
			goto st14
		case 102:
			goto st27
		case 112:
			goto st41
		case 120:
			goto st56
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] > 13:
				if 32 <= data[p] && data[p] <= 47 {
					goto st9
				}
			case data[p] >= 9:
				goto st9
			}
		case data[p] > 63:
			switch {
			case data[p] > 96:
				if 123 <= data[p] && data[p] <= 126 {
					goto st9
				}
			case data[p] >= 91:
				goto st9
			}
		default:
			goto st9
		}
		goto st1
	st10:
		if p++; p == pe {
			goto _test_eof10
		}
	st_case_10:
		switch data[p] {
		case 33:
			goto st10
		case 59:
			goto st11
		case 60:
			goto st12
		case 64:
			goto st13
		case 69:
			goto st73
		case 100:
			goto st14
		case 101:
			goto st73
		case 102:
			goto st27
		case 112:
			goto st41
		case 120:
			goto st56
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] > 13:
				if 32 <= data[p] && data[p] <= 47 {
					goto st9
				}
			case data[p] >= 9:
				goto st9
			}
		case data[p] > 63:
			switch {
			case data[p] > 96:
				if 123 <= data[p] && data[p] <= 126 {
					goto st9
				}
			case data[p] >= 91:
				goto st9
			}
		default:
			goto st9
		}
		goto st1
	st11:
		if p++; p == pe {
			goto _test_eof11
		}
	st_case_11:
		switch data[p] {
		case 33:
			goto st10
		case 59:
			goto st11
		case 60:
			goto st12
		case 64:
			goto st13
		case 98:
			goto st68
		case 100:
			goto st14
		case 102:
			goto st27
		case 112:
			goto st41
		case 120:
			goto st56
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] > 13:
				if 32 <= data[p] && data[p] <= 47 {
					goto st9
				}
			case data[p] >= 9:
				goto st9
			}
		case data[p] > 63:
			switch {
			case data[p] > 96:
				if 123 <= data[p] && data[p] <= 126 {
					goto st9
				}
			case data[p] >= 91:
				goto st9
			}
		default:
			goto st9
		}
		goto st1
	st12:
		if p++; p == pe {
			goto _test_eof12
		}
	st_case_12:
		switch data[p] {
		case 33:
			goto st10
		case 59:
			goto st11
		case 60:
			goto st12
		case 64:
			goto st13
		case 100:
			goto st14
		case 102:
			goto st27
		case 112:
			goto st41
		case 115:
			goto st3
		case 120:
			goto st56
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] > 13:
				if 32 <= data[p] && data[p] <= 47 {
					goto st9
				}
			case data[p] >= 9:
				goto st9
			}
		case data[p] > 63:
			switch {
			case data[p] > 96:
				if 123 <= data[p] && data[p] <= 126 {
					goto st9
				}
			case data[p] >= 91:
				goto st9
			}
		default:
			goto st9
		}
		goto st1
	st13:
		if p++; p == pe {
			goto _test_eof13
		}
	st_case_13:
		switch data[p] {
		case 33:
			goto st10
		case 59:
			goto st11
		case 60:
			goto st12
		case 64:
			goto st13
		case 100:
			goto st14
		case 102:
			goto st27
		case 105:
			goto st36
		case 112:
			goto st41
		case 120:
			goto st56
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] > 13:
				if 32 <= data[p] && data[p] <= 47 {
					goto st9
				}
			case data[p] >= 9:
				goto st9
			}
		case data[p] > 63:
			switch {
			case data[p] > 96:
				if 123 <= data[p] && data[p] <= 126 {
					goto st9
				}
			case data[p] >= 91:
				goto st9
			}
		default:
			goto st9
		}
		goto st1
	st14:
		if p++; p == pe {
			goto _test_eof14
		}
	st_case_14:
		switch data[p] {
		case 60:
			goto st2
		case 97:
			goto st15
		}
		goto st1
	st15:
		if p++; p == pe {
			goto _test_eof15
		}
	st_case_15:
		switch data[p] {
		case 60:
			goto st2
		case 116:
			goto st16
		}
		goto st1
	st16:
		if p++; p == pe {
			goto _test_eof16
		}
	st_case_16:
		switch data[p] {
		case 60:
			goto st2
		case 97:
			goto st17
		}
		goto st1
	st17:
		if p++; p == pe {
			goto _test_eof17
		}
	st_case_17:
		switch data[p] {
		case 58:
			goto st18
		case 60:
			goto st2
		}
		goto st1
	st18:
		if p++; p == pe {
			goto _test_eof18
		}
	st_case_18:
		switch data[p] {
		case 60:
			goto st2
		case 116:
			goto st19
		}
		goto st1
	st19:
		if p++; p == pe {
			goto _test_eof19
		}
	st_case_19:
		switch data[p] {
		case 60:
			goto st2
		case 101:
			goto st20
		}
		goto st1
	st20:
		if p++; p == pe {
			goto _test_eof20
		}
	st_case_20:
		switch data[p] {
		case 60:
			goto st2
		case 120:
			goto st21
		}
		goto st1
	st21:
		if p++; p == pe {
			goto _test_eof21
		}
	st_case_21:
		switch data[p] {
		case 60:
			goto st2
		case 116:
			goto st22
		}
		goto st1
	st22:
		if p++; p == pe {
			goto _test_eof22
		}
	st_case_22:
		switch data[p] {
		case 47:
			goto st23
		case 60:
			goto st2
		}
		goto st1
	st23:
		if p++; p == pe {
			goto _test_eof23
		}
	st_case_23:
		switch data[p] {
		case 60:
			goto st2
		case 104:
			goto st24
		}
		goto st1
	st24:
		if p++; p == pe {
			goto _test_eof24
		}
	st_case_24:
		switch data[p] {
		case 60:
			goto st2
		case 116:
			goto st25
		}
		goto st1
	st25:
		if p++; p == pe {
			goto _test_eof25
		}
	st_case_25:
		switch data[p] {
		case 60:
			goto st2
		case 109:
			goto st26
		}
		goto st1
	st26:
		if p++; p == pe {
			goto _test_eof26
		}
	st_case_26:
		switch data[p] {
		case 60:
			goto st2
		case 108:
			goto st209
		}
		goto st1
	st209:
		if p++; p == pe {
			goto _test_eof209
		}
	st_case_209:
		if data[p] == 60 {
			goto tr219
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] > 13:
				if 32 <= data[p] && data[p] <= 47 {
					goto tr218
				}
			case data[p] >= 9:
				goto tr218
			}
		case data[p] > 64:
			switch {
			case data[p] > 96:
				if 123 <= data[p] && data[p] <= 126 {
					goto tr218
				}
			case data[p] >= 91:
				goto tr218
			}
		default:
			goto tr218
		}
		goto st1
tr218:
//line xss.rl:10

            return true
        
	goto st210
	st210:
		if p++; p == pe {
			goto _test_eof210
		}
	st_case_210:
//line xss.go:1139
		if data[p] == 60 {
			goto tr219
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] > 13:
				if 32 <= data[p] && data[p] <= 47 {
					goto tr218
				}
			case data[p] >= 9:
				goto tr218
			}
		case data[p] > 64:
			switch {
			case data[p] > 96:
				if 123 <= data[p] && data[p] <= 126 {
					goto tr218
				}
			case data[p] >= 91:
				goto tr218
			}
		default:
			goto tr218
		}
		goto st1
tr219:
//line xss.rl:10

            return true
        
	goto st211
	st211:
		if p++; p == pe {
			goto _test_eof211
		}
	st_case_211:
//line xss.go:1177
		switch data[p] {
		case 60:
			goto tr219
		case 115:
			goto st3
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] > 13:
				if 32 <= data[p] && data[p] <= 47 {
					goto tr218
				}
			case data[p] >= 9:
				goto tr218
			}
		case data[p] > 64:
			switch {
			case data[p] > 96:
				if 123 <= data[p] && data[p] <= 126 {
					goto tr218
				}
			case data[p] >= 91:
				goto tr218
			}
		default:
			goto tr218
		}
		goto st1
	st27:
		if p++; p == pe {
			goto _test_eof27
		}
	st_case_27:
		switch data[p] {
		case 60:
			goto st2
		case 111:
			goto st28
		}
		goto st1
	st28:
		if p++; p == pe {
			goto _test_eof28
		}
	st_case_28:
		switch data[p] {
		case 60:
			goto st2
		case 114:
			goto st29
		}
		goto st1
	st29:
		if p++; p == pe {
			goto _test_eof29
		}
	st_case_29:
		switch data[p] {
		case 60:
			goto st2
		case 109:
			goto st30
		}
		goto st1
	st30:
		if p++; p == pe {
			goto _test_eof30
		}
	st_case_30:
		switch data[p] {
		case 60:
			goto st2
		case 97:
			goto st31
		}
		goto st1
	st31:
		if p++; p == pe {
			goto _test_eof31
		}
	st_case_31:
		switch data[p] {
		case 60:
			goto st2
		case 99:
			goto st32
		}
		goto st1
	st32:
		if p++; p == pe {
			goto _test_eof32
		}
	st_case_32:
		switch data[p] {
		case 60:
			goto st2
		case 116:
			goto st33
		}
		goto st1
	st33:
		if p++; p == pe {
			goto _test_eof33
		}
	st_case_33:
		switch data[p] {
		case 60:
			goto st2
		case 105:
			goto st34
		}
		goto st1
	st34:
		if p++; p == pe {
			goto _test_eof34
		}
	st_case_34:
		switch data[p] {
		case 60:
			goto st2
		case 111:
			goto st35
		}
		goto st1
	st35:
		if p++; p == pe {
			goto _test_eof35
		}
	st_case_35:
		switch data[p] {
		case 60:
			goto st2
		case 110:
			goto st209
		}
		goto st1
	st36:
		if p++; p == pe {
			goto _test_eof36
		}
	st_case_36:
		switch data[p] {
		case 60:
			goto st2
		case 109:
			goto st37
		}
		goto st1
	st37:
		if p++; p == pe {
			goto _test_eof37
		}
	st_case_37:
		switch data[p] {
		case 60:
			goto st2
		case 112:
			goto st38
		}
		goto st1
	st38:
		if p++; p == pe {
			goto _test_eof38
		}
	st_case_38:
		switch data[p] {
		case 60:
			goto st2
		case 111:
			goto st39
		}
		goto st1
	st39:
		if p++; p == pe {
			goto _test_eof39
		}
	st_case_39:
		switch data[p] {
		case 60:
			goto st2
		case 114:
			goto st40
		}
		goto st1
	st40:
		if p++; p == pe {
			goto _test_eof40
		}
	st_case_40:
		switch data[p] {
		case 60:
			goto st2
		case 116:
			goto st209
		}
		goto st1
	st41:
		if p++; p == pe {
			goto _test_eof41
		}
	st_case_41:
		switch data[p] {
		case 60:
			goto st2
		case 97:
			goto st42
		}
		goto st1
	st42:
		if p++; p == pe {
			goto _test_eof42
		}
	st_case_42:
		switch data[p] {
		case 60:
			goto st2
		case 116:
			goto st43
		}
		goto st1
	st43:
		if p++; p == pe {
			goto _test_eof43
		}
	st_case_43:
		switch data[p] {
		case 60:
			goto st2
		case 116:
			goto st44
		}
		goto st1
	st44:
		if p++; p == pe {
			goto _test_eof44
		}
	st_case_44:
		switch data[p] {
		case 60:
			goto st2
		case 101:
			goto st45
		}
		goto st1
	st45:
		if p++; p == pe {
			goto _test_eof45
		}
	st_case_45:
		switch data[p] {
		case 60:
			goto st2
		case 114:
			goto st46
		}
		goto st1
	st46:
		if p++; p == pe {
			goto _test_eof46
		}
	st_case_46:
		switch data[p] {
		case 60:
			goto st2
		case 110:
			goto st47
		}
		goto st1
	st47:
		if p++; p == pe {
			goto _test_eof47
		}
	st_case_47:
		switch data[p] {
		case 60:
			goto st49
		case 61:
			goto st213
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st47
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st48
				}
			default:
				goto st47
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st48
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st47
					}
				case data[p] >= 97:
					goto st48
				}
			default:
				goto st47
			}
		default:
			goto st47
		}
		goto st1
	st48:
		if p++; p == pe {
			goto _test_eof48
		}
	st_case_48:
		switch data[p] {
		case 60:
			goto st2
		case 61:
			goto st212
		case 95:
			goto st48
		}
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st48
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st48
			}
		default:
			goto st48
		}
		goto st1
tr220:
//line xss.rl:10

            return true
        
	goto st212
	st212:
		if p++; p == pe {
			goto _test_eof212
		}
	st_case_212:
//line xss.go:1531
		switch data[p] {
		case 60:
			goto tr219
		case 95:
			goto tr220
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto tr218
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st212
				}
			default:
				goto tr218
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st212
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto tr218
					}
				case data[p] >= 97:
					goto st212
				}
			default:
				goto tr218
			}
		default:
			goto tr218
		}
		goto st1
	st49:
		if p++; p == pe {
			goto _test_eof49
		}
	st_case_49:
		switch data[p] {
		case 60:
			goto st49
		case 61:
			goto st213
		case 115:
			goto st50
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto st47
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st48
				}
			default:
				goto st47
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st48
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto st47
					}
				case data[p] >= 97:
					goto st48
				}
			default:
				goto st47
			}
		default:
			goto st47
		}
		goto st1
tr224:
//line xss.rl:10

            return true
        
	goto st213
	st213:
		if p++; p == pe {
			goto _test_eof213
		}
	st_case_213:
//line xss.go:1634
		switch data[p] {
		case 60:
			goto tr223
		case 61:
			goto tr224
		case 95:
			goto tr224
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto tr221
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st218
				}
			default:
				goto tr221
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st218
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto tr221
					}
				case data[p] >= 97:
					goto st218
				}
			default:
				goto tr221
			}
		default:
			goto tr221
		}
		goto st1
tr221:
//line xss.rl:10

            return true
        
	goto st214
	st214:
		if p++; p == pe {
			goto _test_eof214
		}
	st_case_214:
//line xss.go:1690
		switch data[p] {
		case 60:
			goto tr223
		case 61:
			goto tr224
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto tr221
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st48
				}
			default:
				goto tr221
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st48
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto tr221
					}
				case data[p] >= 97:
					goto st48
				}
			default:
				goto tr221
			}
		default:
			goto tr221
		}
		goto st1
tr223:
//line xss.rl:10

            return true
        
	goto st215
	st215:
		if p++; p == pe {
			goto _test_eof215
		}
	st_case_215:
//line xss.go:1744
		switch data[p] {
		case 60:
			goto tr223
		case 61:
			goto tr224
		case 115:
			goto st50
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] < 32:
				if 9 <= data[p] && data[p] <= 13 {
					goto tr221
				}
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st48
				}
			default:
				goto tr221
			}
		case data[p] > 64:
			switch {
			case data[p] < 91:
				if 65 <= data[p] && data[p] <= 90 {
					goto st48
				}
			case data[p] > 96:
				switch {
				case data[p] > 122:
					if 123 <= data[p] && data[p] <= 126 {
						goto tr221
					}
				case data[p] >= 97:
					goto st48
				}
			default:
				goto tr221
			}
		default:
			goto tr221
		}
		goto st1
	st50:
		if p++; p == pe {
			goto _test_eof50
		}
	st_case_50:
		switch data[p] {
		case 60:
			goto st2
		case 61:
			goto st212
		case 95:
			goto st48
		case 99:
			goto st51
		}
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st48
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st48
			}
		default:
			goto st48
		}
		goto st1
	st51:
		if p++; p == pe {
			goto _test_eof51
		}
	st_case_51:
		switch data[p] {
		case 60:
			goto st2
		case 61:
			goto st212
		case 95:
			goto st48
		case 114:
			goto st52
		}
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st48
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st48
			}
		default:
			goto st48
		}
		goto st1
	st52:
		if p++; p == pe {
			goto _test_eof52
		}
	st_case_52:
		switch data[p] {
		case 60:
			goto st2
		case 61:
			goto st212
		case 95:
			goto st48
		case 105:
			goto st53
		}
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st48
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st48
			}
		default:
			goto st48
		}
		goto st1
	st53:
		if p++; p == pe {
			goto _test_eof53
		}
	st_case_53:
		switch data[p] {
		case 60:
			goto st2
		case 61:
			goto st212
		case 95:
			goto st48
		case 112:
			goto st54
		}
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st48
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st48
			}
		default:
			goto st48
		}
		goto st1
	st54:
		if p++; p == pe {
			goto _test_eof54
		}
	st_case_54:
		switch data[p] {
		case 60:
			goto st2
		case 61:
			goto st212
		case 95:
			goto st48
		case 116:
			goto st55
		}
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st48
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st48
			}
		default:
			goto st48
		}
		goto st1
	st55:
		if p++; p == pe {
			goto _test_eof55
		}
	st_case_55:
		switch data[p] {
		case 61:
			goto st216
		case 62:
			goto tr18
		case 95:
			goto st55
		}
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st55
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st55
			}
		default:
			goto st55
		}
		goto st8
tr226:
//line xss.rl:10
